@@ -1,5 +1,9 @@
 2007-08-19  Jeffrey C Honig  <jch@honig.net>
 
+	* mh-mime.el (mh-mml-to-mime): GPG requires e-mail addresses, not
+	aliases.  So resolve aliases before passing addresses to GPG/PGP.
+	Closes SF #649226.
+
 	* mh-e.el (mh-invisible-header-fields-internal): Update with all
 	the entries from
 	http://people.dsv.su.se/~jpalme/ietf/mail-headers, plus some of my
